add pointSet func

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <div id="allmap"></div>
+    <div class="formData">
+        <input type="text" id="longitude">
+        <br>
+        <input type="text" id="latitude">
+    </div>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=OpVm9UjnXj1ACmgEQLH7QSFh"></script>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/dwzMap.js"></script>
