--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <title>dwzMap</title>
 </head>
 <body>
-    <div id="allmap"></div>
+    <div id="allmap" style="width: 450px;height: 450px;"></div>
     <div class="formData">
         <input type="text" id="longitude">
         <br>
         <input type="text" id="latitude">
     </div>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=OpVm9UjnXj1ACmgEQLH7QSFh"></script>
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <!--加载鼠标绘制工具-->
+    <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
     <script src="js/dwzMap.js"></script>
     <script src="index.js"></script>
 </body>
