add show tip func

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <div class="col-md-12">
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#">创建地图   </a></li>
-                    <li               ><a href="components/showMarker/showMarker.html">显示标注</a></li>
+                    <li               ><a href="components/showMarker/showMarker.html">添加标注</a></li>
+                    <li               ><a href="components/showMarker/showMarker.html">添加线</a></li>
+                    <li               ><a href="components/showMarker/showMarker.html">添加多边形</a></li>
                     <li               ><a href="#">编辑点线面 </a></li>
                 </ul>
             </div>
@@ -25,7 +27,7 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Usage</div>
                     <div class="panel-body">
                         <ol>
@@ -55,7 +57,7 @@
                         </ol>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">创建地图Object</div>
                     <div class="panel-body">
                         <ol>
