add remove logo func

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>dwzMap</title>
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.css">
+    <style>
+        .anchorBL {
+            display:none
+        };
+    </style>
 </head>
 <body>
     <div class="container">
@@ -52,6 +57,17 @@
                                 <br>
                                 <code>
                                     &lt;script src="js/dwzMap.js"&gt;&lt;/script&gt;
+                                </code>
+                            </li>
+                            <li>
+                                若想去掉百度版权LOGO，添加以下样式
+                                <br>
+                                <code>
+                                    &lt;style&gt; <br>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;.anchorBL { <br>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;display:none <br>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;}; <br>
+                                    &lt;/style&gt;
                                 </code>
                             </li>
                         </ol>
